# z-proxmon

./: Cargo.toml  deploy.sh  rust-toolchain.toml  z-proxmon.service
src/: cgroup_info.rs  get_stats.rs  http_server.rs  index.html  io_wait.rs  main.rs  monitor.rs  monitor_log.rs  nvidia.rs  proxmox.rs  structures.rs
