[package]
name = "z-proxmon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

triomphe = "0.1"
blake3 = "1.8"

compio = { version = "0.18", features = ["fs", "process"] }
futures-util = "0.3"

axum = { version = "0.8", default-features = false, features = ["http1", "http2", "json"] }
cyper-axum = { version = "0.8", features = ["http2"] }

sysinfo = { version = "0.38", features = ["serde"] }
nvml-wrapper = "0.12"

z-sync = { git = "https://github.com/imzacm/z-sync.git", rev = "9fb77ceced2224064d19a8d80f60248c8bb7cca6" }
z-queue = { git = "https://github.com/imzacm/z-queue.git", rev = "4e8f471fe38a2e66868c9f59b3a4c016bfb97daf", features = ["triomphe", "stream"] }

lru = "0.16"
