[package]
name = "z-proxmon"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

triomphe = "0.1"
blake3 = "1.8"

compio = { version = "0.19", features = ["fs", "process"] }
futures-util = "0.3"

axum = { version = "0.8", default-features = false, features = ["http1", "http2", "json"] }
cyper-axum = { version = "0.9", features = ["http2"] }

sysinfo = { version = "0.39", features = ["serde"] }
nvml-wrapper = "0.12"

z-sync = { git = "https://github.com/imzacm/z-sync.git", rev = "f533de87fdc246afe66bfcbfbfad556b49711e4d" }
z-queue = { git = "https://github.com/imzacm/z-queue.git", rev = "7015e5d7de06c15a6a5c36e02619e3d3b0084005", features = ["triomphe", "stream"] }

lru = "0.18"
tempfile = "3.27"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
bincode = { version = "2.0.1", features = ["serde"] }
